--- a/index.html
+++ b/index.html
@@ -4,34 +4,54 @@
   <head>
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">
-        <img src="imgs/BTS-logo.png" width="115.2" height="64.8" alt="bts logo">
-      </a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span>
-            </a>            
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropDown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About<span class="sr-only">(current)</span></a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="whoweare.html">Who We are</a>
-                <a class="dropdown-item" href="journey.html">Our Journey</a>
-                <a class="dropdown-item" href="memberprofile.html">Member Profile</a>
-              </div>
-          </li>
-        </ul>
-      </div>
-      
-    </nav>
+    <!--<section class="cover text-center"> -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+          <img src="imgs/BTS-logo.png" width="115.2" height="64.8" alt="bts logo">
+        </a>
+        <!--<div class="container">-->
+          <div class="collapse navbar-collapse" id="navbarText">              
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span>
+                </a>            
+              </li>                
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">About</a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="about-menu/whoweare.html">Who We are</a>
+                    <a class="dropdown-item" href="about-menu/journey.html">Our Journey</a>
+                    <a class="dropdown-item" href="about-menu/memberprofile.html">Member Profile</a>
+                  </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="discography.html">Discography<span class="sr-only">current)</span>
+                </a>            
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="media.html">Media<span class="sr-only">(current)</span>
+                </a>
+              </li>                
+              <li class="nav-item">
+                <a class="nav-link" href="merchandise.html">Merchandise<span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="tour.html">Tour Dates<span class="sr-only">(current)</span>
+                </a>
+              </li>
+            </ul>
+          <!--</div>-->
+        </div>
+      </nav>
+    <!--</section>-->
+        <img src = "imgs/bts-wallpaper.jpg" alt="bts photo" class="image">
 
-    <img src = "imgs/bts-wallpaper.jpg" alt="bts photo" class="image">
+
 
 
   </body>
