why tf dont u work u nutso

--- a/index.html
+++ b/index.html
@@ -20,13 +20,9 @@
                 <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span>
                 </a>            
               </li>                
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">About</a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="about-menu/whoweare.html">Who We are</a>
-                    <a class="dropdown-item" href="about-menu/journey.html">Our Journey</a>
-                    <a class="dropdown-item" href="about-menu/memberprofile.html">Member Profile</a>
-                  </div>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span>
+                </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="discography.html">Discography<span class="sr-only">current)</span>
