--- a/about.html
+++ b/about.html
@@ -57,12 +57,12 @@
     <!--</Title>-->
 	<div class="title-container">
 		<div class="title-box">
-			<h1 class="title" id="journey" style="color: #EEAC9E; padding: 20px">Our Journey</h1>
+			<h1 class="title" style="color: #EEAC9E; padding: 20px">Our Journey</h1>
 			<h1 class="title" style="color: #EEAC9E; padding: 20px">Member Profiles</h1>
 			<h1 class="title" style="color: #EEAC9E; padding: 20px">Our Prospects</h1>
 		</div>
 	</div>
-	<h1 align="middle" class="title" style="color: #EEAC9E; padding: 20px"></h1>
+
 
 	<div class='menu-container'>
       <div class='menu'>
