--- a/about.html
+++ b/about.html
@@ -2,15 +2,12 @@
 <html>
 
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-	<style>
-		@import url('https://fonts.googleapis.com/css?family=Quicksand:300&display=swap');
-	</style>
 <body>
     <!--<section class="cover text-center"> -->
   	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -54,39 +51,19 @@
 
     <!--</banner>-->
 
-    <!--</Title>-->
+    <!--<Title>-->
 	<div class="title-container">
 		<div class="title-box">
-			<h1 class="title" style="color: #EEAC9E; padding: 20px">Our Journey</h1>
-			<h1 class="title" style="color: #EEAC9E; padding: 20px">Member Profiles</h1>
-			<h1 class="title" style="color: #EEAC9E; padding: 20px">Our Prospects</h1>
+			<h1 class="title" align="middle" style="color: #EEAC9E; padding: 20px"><a class="title" data-scroll href="#ourjourney">OUR JOURNEY</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEMBERS PROFILE&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LOVE MYSELF</h1>
+				<p class="bio-container">
+					Record-breaking South Korean boy band BTS (aka Bangtan Boys) balance an energetic blend of dance-pop and hip-hop with deeply introspective lyrics, which helped them build a devoted global following while also becoming the most successful K-pop act in U.S. chart history. Debuting in the early 2010s with their Skool trilogy, they steadily expanded their audience until breaking into the mainstream consciousness with the Love Yourself series. In May 2018, their third official full-length, Love Yourself: Tear, topped the Billboard 200, becoming the first K-pop to hit number one in the U.S. and the highest-charting album by an Asian act to date.
+					<img src="imgs/bts-blue.jpg" align="left" width="600px" style="padding: 50px;float: left" />
+					Riding the international success of the Love Yourself series, the boys closed the era with a sold-out global stadium tour, which primed them for the start of the next BTS wave: Map of the Soul. The first single from the 2019 album, "Persona," showcased a solo RM referencing both Carl Jung and BTS' own 2014 track "Intro: Skool Luv Affair," while the follow-up "Boy With Luv" recruited American singer Halsey. While "Boy with Luv" climbed into the Top 10 of the Hot 100, the album topped the Billboard 200, becoming BTS' third number one in a year. Before the next official release, the band found themselves the focus of a mobile game, BTS World. The accompanying companion album, BTS World: Original Soundtrack, included a new track by the crew, as well as a trio of collaborations with guests Charli XCX, Zara Larsson, and Juice WRLD. Not an official BTS album per se, the bulk of the set featured instrumental compositions by Kang Minkook, who wrote one theme song per BTS member, and showcased tracks by Korean indie duo Okdal and Big Hit labelmate Lee Hyun. Despite not being an actual BTS effort, the soundtrack still managed to land at number 72 on the Billboard 200 while simultaneously topping the Korean charts.
+				</p>
 		</div>
 	</div>
-
-
-	<div class='menu-container'>
-      <div class='menu'>
-        <div class='date'>Aug 14, 2016</div>
-        <div class='signup'>Sign Up</div>
-        <div class='login'>Login</div>
-      </div>
-    </div>
-
-
-    <div class="d-flex flex-column">
-  <div class="p-2">Flex item 1</div>
-  <div class="p-2">Flex item 2</div>
-  <div class="p-2">Flex item 3</div>
-</div>
-<div class="d-flex flex-column-reverse">
-  <div class="p-2">Flex item 1</div>
-  <div class="p-2">Flex item 2</div>
-  <div class="p-2">Flex item 3</div>
-</div>     
 	<!--</Title>-->
 
 
-
 </body>
-
 </html>
