--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="tour.html">Tour Dates<span class="sr-only">(current)</span>
+                <a class="nav-link" href="tour.html">Tour dates<span class="sr-only">(current)</span>
                 </a>
               </li>
             </ul>
