--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 		<div class="title-container">
 			<div class="title-box">
 				<h1 class="title" style="color: #EEAC9E; padding: 20px"><a data-scroll href="#ourjourney">&nbsp;&nbsp;OUR JOURNEY</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a data-scroll href="#memberprofile">MEMBERS PROFILE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a data-scroll href="#lovemyself">LOVE MYSELF</a></h1>				
-					<div id="ourjourney" style="font-family: 'Josefin Sans', sans-serif; margin-left: 50px; font-size: 100px; margin-top: -7px; color: #B6B7D3">Road to recognition
+					<div id="ourjourney" style="font-family: 'Josefin Sans', sans-serif; margin-left: 50px; font-size: 100px; color: #B6B7D3">Road to recognition
 					</div>
 					<p style="margin-right: 50px; margin-left: 50px; margin-top: -15px; text-align:justify">
 						Record-breaking South Korean boy band BTS (aka Bangtan Boys) balance an energetic blend of dance-pop and hip-hop with deeply introspective lyrics, which helped them build a devoted global following while also becoming the most successful K-pop act in U.S. chart history. Debuting in the early 2010s with their Skool trilogy, they steadily expanded their audience until breaking into the mainstream consciousness with the Love Yourself series. In May 2018, their third official full-length, Love Yourself: Tear, topped the Billboard 200, becoming the first K-pop to hit number one in the U.S. and the highest-charting album by an Asian act to date.</p>
@@ -65,7 +65,7 @@
 						Riding the international success of the Love Yourself series, the boys closed the era with a sold-out global stadium tour, which primed them for the start of the next BTS wave: Map of the Soul. The first single from the 2019 album, "Persona," showcased a solo RM referencing both Carl Jung and BTS' own 2014 track "Intro: Skool Luv Affair," while the follow-up "Boy With Luv" recruited American singer Halsey. While "Boy with Luv" climbed into the Top 10 of the Hot 100, the album topped the Billboard 200, becoming BTS' third number one in a year. Before the next official release, the band found themselves the focus of a mobile game, BTS World. The accompanying companion album, BTS World: Original Soundtrack, included a new track by the crew, as well as a trio of collaborations with guests Charli XCX, Zara Larsson, and Juice WRLD. Not an official BTS album per se, the bulk of the set featured instrumental compositions by Kang Minkook, who wrote one theme song per BTS member, and showcased tracks by Korean indie duo Okdal and Big Hit labelmate Lee Hyun. Despite not being an actual BTS effort, the soundtrack still managed to land at number 72 on the Billboard 200 while simultaneously topping the Korean charts.</p>
 					<p style="text-align: justify; margin-right: 50px; margin-top: 5px">
 						Following the establishment of their Love Myself anti-violence campaign in partnership with UNICEF, BTS addressed the United Nations 73rd General Assembly as the youngest ever recipients of the Order of Cultural Merit from the President of South Korea due to their contributions in spreading Korean culture and language.</p>
-					<br><br><br><br><br><br><br><br>
+					<br>
 					<div id="memberprofile" style="font-family: 'Josefin Sans', sans-serif; margin-left: 50px; font-size: 100px; color: #B6B7D3">The septets
 					</div>
 					<figure>
