--- a/tour.html
+++ b/tour.html
@@ -73,7 +73,7 @@
     <tr>
       <th scope="row">07/31/2020</th>
       <td>8:00pm</td>
-      <td>Tokyo, Japan</td>
+      <td>Santa Clara, Japan</td>
       <td>Tokyo Stadium</td>
       <td><a href="https://www.ticketmaster.com/">Ticket Master</a></td>
     </tr>
